[tool.poetry]
name = "wrapenvars"
version = "0.1.0"
description = "encode/decode base64 strings"
authors = ["David Guerrero <deivguerrero@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/deivguerrero/wrapenvars"
repository = "https://github.com/deivguerrero/wrapenvars"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
